angel-investing-marketplace/k8s/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: angel-investing-marketplace
  labels:
    name: angel-investing-marketplace
    app: angel-investing-marketplace
